recursion.cons.occurrences.Occurrences.scala.error
Erreur de compilation :
Occurrences:14: error: not found: value occurence
      return (1+occurence(l.tail, v))
                ^Occurrences:20: error: not found: value occurence
      return occurence(l.tail, v)
             ^