recursion.cons.occurrences.Occurrences.scala.code
def occurrences(l:List[Int], v:Int): Int = {
  
  if(l==Nil){
    
    return 0;
    
  }
  
  else{
    
    if(l.head==v){
      
      return (1+occurence(l.tail, v))
      
    }
    
    else{
      
      return occurence(l.tail, v)
      
    }
  }
}